# docs/swagger.json
@@ -1064,6 +1064,11 @@
         },
         "/api/v1/rest/request": {
             "get": {
+                "security": [
+                    {
+                        "OauthSE": []
+                    }
+                ],
                 "description": "Make a GET Request",
                 "consumes": [
                     "application/json"
@@ -1083,6 +1088,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "OauthSE": []
+                    }
+                ],
                 "description": "Make a GET Request",
                 "consumes": [
                     "application/json"
@@ -1102,6 +1112,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "OauthSE": []
+                    }
+                ],
                 "description": "Make a GET Request",
                 "consumes": [
                     "application/json"
@@ -1121,6 +1136,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "OauthSE": []
+                    }
+                ],
                 "description": "Make a GET Request",
                 "consumes": [
                     "application/json"
@@ -1140,6 +1160,11 @@
                 }
             },
             "options": {
+                "security": [
+                    {
+                        "OauthSE": []
+                    }
+                ],
                 "description": "Make a GET Request",
                 "consumes": [
                     "application/json"
@@ -1159,6 +1184,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "OauthSE": []
+                    }
+                ],
                 "description": "Make a GET Request",
                 "consumes": [
                     "application/json"
@@ -2016,6 +2046,19 @@
                 "technical": {
                     "$ref": "#/definitions/whoisparser.Contact"
                 }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "OauthSE": {
+            "type": "oauth2",
+            "flow": "accessCode",
+            "authorizationUrl": "https://oauth.se/realms/master/protocol/openid-connect/auth",
+            "tokenUrl": "https://oauth.se/realms/master/protocol/openid-connect/token",
+            "scopes": {
+                "email": "Email Scope",
+                "openid": "Default Scope",
+                "profile": "Profile Scope"
             }
         }
     }
